fix navbar overlap scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,6 @@
   background-color: hsl(0, 0%, 98%);
 }
 
-.navbar-position {
-  right: 17px;
-}
-
 .mt-header {
   margin-top: 64px;
 }
